// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup component renders as expected 1`] = `
<fieldset
  className="sc-bZQynM dSZIHB"
>
  <div />
  <label
    checked={false}
    className="sc-bwzfXH kVIXAD sc-bdVaJa kHjvzh"
    disabled={false}
    htmlFor="test-option-1"
  >
    <input
      className="sc-htpNat jeuMMj"
      disabled={false}
      id="test-option-1"
      name="test"
      onClick={[Function]}
      type="radio"
      value={0}
    />
    <span
      className="radio-fill sc-ifAKCX fnveVG"
      fill="#fff"
    />
    <span
      aria-hidden={false}
      className="sc-bxivhb bRNnnP"
    >
      Option 0
    </span>
  </label>
  <label
    checked={false}
    className="sc-bwzfXH kVIXAD sc-bdVaJa kHjvzh"
    disabled={false}
    htmlFor="test-option-2"
  >
    <input
      className="sc-htpNat jeuMMj"
      disabled={false}
      id="test-option-2"
      name="test"
      onClick={[Function]}
      type="radio"
      value={1}
    />
    <span
      className="radio-fill sc-ifAKCX fnveVG"
      fill="#fff"
    />
    <span
      aria-hidden={false}
      className="sc-bxivhb bRNnnP"
    >
      Option 1
    </span>
  </label>
  <label
    checked={false}
    className="sc-bwzfXH kVIXAD sc-bdVaJa kHjvzh"
    disabled={false}
    htmlFor="test-option-3"
  >
    <input
      className="sc-htpNat jeuMMj"
      disabled={false}
      id="test-option-3"
      name="test"
      onClick={[Function]}
      type="radio"
      value={2}
    />
    <span
      className="radio-fill sc-ifAKCX fnveVG"
      fill="#fff"
    />
    <span
      aria-hidden={false}
      className="sc-bxivhb bRNnnP"
    >
      Option 2
    </span>
  </label>
</fieldset>
`;

exports[`RadioGroup component renders as expected with legend text 1`] = `
<fieldset
  className="sc-bZQynM dSZIHB"
>
  <div>
    <legend
      className="sc-EHOje bJBAcN"
    >
      Test legend
    </legend>
  </div>
  <label
    checked={false}
    className="sc-bwzfXH kVIXAD sc-bdVaJa kHjvzh"
    disabled={false}
    htmlFor="test-option-1"
  >
    <input
      className="sc-htpNat jeuMMj"
      disabled={false}
      id="test-option-1"
      name="test"
      onClick={[Function]}
      type="radio"
      value={0}
    />
    <span
      className="radio-fill sc-ifAKCX fnveVG"
      fill="#fff"
    />
    <span
      aria-hidden={false}
      className="sc-bxivhb bRNnnP"
    >
      Option 0
    </span>
  </label>
  <label
    checked={false}
    className="sc-bwzfXH kVIXAD sc-bdVaJa kHjvzh"
    disabled={false}
    htmlFor="test-option-2"
  >
    <input
      className="sc-htpNat jeuMMj"
      disabled={false}
      id="test-option-2"
      name="test"
      onClick={[Function]}
      type="radio"
      value={1}
    />
    <span
      className="radio-fill sc-ifAKCX fnveVG"
      fill="#fff"
    />
    <span
      aria-hidden={false}
      className="sc-bxivhb bRNnnP"
    >
      Option 1
    </span>
  </label>
  <label
    checked={false}
    className="sc-bwzfXH kVIXAD sc-bdVaJa kHjvzh"
    disabled={false}
    htmlFor="test-option-3"
  >
    <input
      className="sc-htpNat jeuMMj"
      disabled={false}
      id="test-option-3"
      name="test"
      onClick={[Function]}
      type="radio"
      value={2}
    />
    <span
      className="radio-fill sc-ifAKCX fnveVG"
      fill="#fff"
    />
    <span
      aria-hidden={false}
      className="sc-bxivhb bRNnnP"
    >
      Option 2
    </span>
  </label>
</fieldset>
`;
